--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@tanstack/react-table": "^8.15.3",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
+    "expo-file-system": "~16.0.9",
     "expo-image-picker": "~14.7.1",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.5",
+    "mime": "^4.0.3",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
