--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Gym customers",
+    "name": "Iron Subscription",
     "slug": "client",
     "version": "1.0.0",
     "orientation": "portrait",
