--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.0.4",
     "expo-secure-store": "~13.0.1",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "formik": "^2.4.5",
     "mime": "^4.0.3",
